--- a/css/gridStyles.css
+++ b/css/gridStyles.css
@@ -130,10 +130,10 @@
   width: 80px !important;
 }
 
-#question-grid-new .bg-slide {
+/* #question-grid-new .bg-slide {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
