--- a/css/vote.css
+++ b/css/vote.css
@@ -200,7 +200,7 @@ body {
 }
 
 .comment-section .inner {
-  max-width: 600px;
+  min-width: 600px;
   padding: 10px 20px;
   margin: auto;
 }
